RESOLVED FIXED75358
getComputedStyle for margin is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75358
Summary getComputedStyle for margin is not implemented.
Alexis Menard (darktears)
Reported 2011-12-29 09:03:08 PST
getComputedStyle for margin is not implemented.
Attachments
Patch (8.88 KB, patch)
2011-12-29 09:04 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-12-29 09:04:13 PST
WebKit Review Bot
Comment 2 2011-12-29 10:52:42 PST
Comment on attachment 120752 [details] Patch Clearing flags on attachment: 120752 Committed r103811: <http://trac.webkit.org/changeset/103811>
WebKit Review Bot
Comment 3 2011-12-29 10:52:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.