getComputedStyle for margin is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75358

Reviewed by Andreas Kling.

Source/WebCore:

Implement getComputedStyle for margin.

Test: fast/css/getComputedStyle/getComputedStyle-margin-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test to cover that we return correct values.

* fast/css/getComputedStyle/getComputedStyle-margin-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-margin-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103811 268f45cc-cd09-0410-ab3c-d52691b4dbfc